-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.717 2010-03-11 14:27:14 remko Exp $
-----------------------------------------------------------------------------------------

2010-03-11	remko
	* ps2raster.c:		End matter did not get parsed when there is no %%Orientation.

2010-03-10	pwessel
	* gmt_map.c:		Tried to free memory when nothing had been allocated.

2010-03-09	pwessel
	* pslegend.c:		Uninitialized text string could put garbage in script.

2010-03-02	pwessel
	* x2sys/x2sys_get.c:	Added undocumented -d option to dump x2sys_index.b to text
				to aid in debugging.
	* mgd77/mgd77.c:	Incorrectly added track list =tracks.lis as another track name
				after correctly including all the listed tracks. No harm done
				other than an annoying "Cannot find track =tracks" message.

2010-02-28	pwessel
	* gmt_map.c:		GMT_wesn_clip function would clip polygons even though
				there were no restrictions on longitudes (w/e = 360).

2010-02-26	pwessel
	* x2sys/x2sys.c:	Reading of data formats .gmt and custom returned all columns and
				not just the requested columns, causing errors upstream.
	* x2sys/x2sys_datalist.c:	Check to see if both lon and lat had been requested only
				checked for longitude (twice).
	* mgg/mgd77togmt.c:	Now has proper synopsis

2010-02-21	jluis
	* gmt2rgb.c:		Option -G was freeing the output name before it was even allocated.
				This crashed the Windows binary.

2010-02-20	jluis
	* gmt_init.c:		Chop off any eventual EOLs characters that might be in argv
				strings as it will happen when it was created by a shell command.
				We need this so that native Win binaries can be used in Cygwin

2010-02-15	remko
	* gmt_support.c:	Further improved internals of GMT_contour, GMT_trace_contour,
				GMT_splice_contour, significantly reducing amount of code lines.
				Removed GMT_start_contour. 

2010-02-14	remko
	* grdcontour.c:		Reverting change of 2010-01-28 because closing a contour